--- a/pages/prog202/a103552492.md
+++ b/pages/prog202/a103552492.md
@@ -1,4 +1,4 @@
-### 9月19日国际重要讯息
+### 【新闻周刊】第856期（2022/10/15）
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,33 +7,23 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2022年09月19日讯】接下来请看一组新闻简讯。
- </p>
- <p>
-  <ok href="https://www.ntdtv.com/gb/尹锡悦.htm">
-   尹锡悦
+  【新唐人北京时间2022年10月16日讯】北京现15条传染链 20省市疫情不停；
+  <ok href="https://www.ntdtv.com/gb/白宫战略报告.htm">
+   白宫战略报告
   </ok>
-  希望在纽约与
-  <ok href="https://www.ntdtv.com/gb/岸田文雄.htm">
-   岸田文雄
+  指中共挑战
+  <ok href="https://www.ntdtv.com/gb/蔡英文.htm">
+   蔡英文
   </ok>
-  会面，但日韩高峰会传出变数。
- </p>
- <p>
-  国际心肺移植学会全面禁止
-  <ok href="https://www.ntdtv.com/gb/中国器官移植.htm">
-   中国器官移植
+  :干戈不是选项；
+  <ok href="https://www.ntdtv.com/gb/俄军.htm">
+   俄军
   </ok>
-  论文。
- </p>
- <p>
-  <ok href="https://www.ntdtv.com/gb/拜登.htm">
-   拜登
+  疯狂轰炸 西方齐谴责
+  <ok href="https://www.ntdtv.com/gb/军援乌克兰.htm">
+   军援乌克兰
   </ok>
-  指出：中共若武力侵台，美国会出兵防卫。
- </p>
- <p>
-  俄罗斯流行歌后普加乔娃反对入侵乌克兰。
+  。
  </p>
  <div class="single_ad">
  </div>
@@ -41,13 +31,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103531682.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103531682.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103531682.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2022/09/19/a103531682.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103552492.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103552492.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103552492.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2022/10/16/a103552492.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a103531682.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a103552492.md' width='0px' height='0px'/>
